// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`report command: basic 1`] = `
Object {
  "missingKeys": Array [
    Object {
      "file": "/Users/kazupon/Projects/my/vue-cli-plugin-i18n/tests/fixture/components/component2.vue",
      "language": "en",
      "line": 10,
      "path": "messages.fuga.foo",
    },
    Object {
      "file": "/Users/kazupon/Projects/my/vue-cli-plugin-i18n/tests/fixture/components/component1.vue",
      "language": "ja",
      "line": 9,
      "path": "messages.buz",
    },
    Object {
      "file": "/Users/kazupon/Projects/my/vue-cli-plugin-i18n/tests/fixture/components/component2.vue",
      "language": "ja",
      "line": 2,
      "path": "messages.bar",
    },
    Object {
      "file": "/Users/kazupon/Projects/my/vue-cli-plugin-i18n/tests/fixture/components/component2.vue",
      "language": "ja",
      "line": 9,
      "path": "messages.hoge",
    },
    Object {
      "file": "/Users/kazupon/Projects/my/vue-cli-plugin-i18n/tests/fixture/components/component2.vue",
      "language": "ja",
      "line": 10,
      "path": "messages.fuga.foo",
    },
  ],
  "unusedKeys": Array [
    Object {
      "file": "/Users/kazupon/Projects/my/vue-cli-plugin-i18n/tests/fixture/locales/en.json",
      "language": "en",
      "line": 4,
      "path": "messages.piyo",
    },
    Object {
      "file": "/Users/kazupon/Projects/my/vue-cli-plugin-i18n/tests/fixture/locales/ja.json",
      "language": "ja",
      "line": 1,
      "path": "messages.piyo",
    },
  ],
}
`;

exports[`report command: optional arguments 1`] = `
Object {
  "missingKeys": Array [
    Object {
      "file": "/Users/kazupon/Projects/my/vue-cli-plugin-i18n/tests/fixture/components/component2.vue",
      "language": "en",
      "line": 10,
      "path": "messages.fuga.foo",
    },
    Object {
      "file": "/Users/kazupon/Projects/my/vue-cli-plugin-i18n/tests/fixture/components/component1.vue",
      "language": "ja",
      "line": 9,
      "path": "messages.buz",
    },
    Object {
      "file": "/Users/kazupon/Projects/my/vue-cli-plugin-i18n/tests/fixture/components/component2.vue",
      "language": "ja",
      "line": 2,
      "path": "messages.bar",
    },
    Object {
      "file": "/Users/kazupon/Projects/my/vue-cli-plugin-i18n/tests/fixture/components/component2.vue",
      "language": "ja",
      "line": 9,
      "path": "messages.hoge",
    },
    Object {
      "file": "/Users/kazupon/Projects/my/vue-cli-plugin-i18n/tests/fixture/components/component2.vue",
      "language": "ja",
      "line": 10,
      "path": "messages.fuga.foo",
    },
  ],
}
`;

exports[`report command: required arguments 1`] = `undefined`;
